# arduino

./: .gitignore
CD4051_test/: CD4051_test.ino  CD4051_test.sln  CD4051_test.vcxproj  CD4051_test.vcxproj.filters
CardInfo/: CardInfo.ino  CardInfo.sln  CardInfo.vcxproj  CardInfo.vcxproj.filters
DNS_SD_Arduino_OTA/: DNS_SD_Arduino_OTA.ino
DehumidifierDriver/: DehumidifierDriver.ino  DehumidifierDriver.sln  DehumidifierDriver.vcxproj  DehumidifierDriver.vcxproj.filters
DehumidifierDriver2/: DehumidifierDriver2.ino
ESB_driver/: ESBDriver.cpp  ESBDriver.h  ESB_driver.ino
ESP32_C3_MH_SR602/: CMakeLists.txt  ESP32_C3_IOT_TEMPLATE.md  GEMINI.md  Implementation_plan.md  PRD.md  README.md  sdkconfig  sdkconfig.defaults.esp32c3
ESP32_C3_MH_SR602/main/: CMakeLists.txt  app_state.h  host_client.c  host_client.h  idf_component.yml  led_indicator.c  led_indicator.h  main.c  mdns_service.c  mdns_service.h  motion_sensor.c  motion_sensor.h  nvs_manager.c  nvs_manager.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
ESP8266_static_ip_test/: platformio.ini
ESP_C3_LED_SERVER/: CMakeLists.txt  GEMINI.md  PRD.md  implementation_plan.md  sdkconfig
ESP_C3_LED_SERVER/main/: CMakeLists.txt  app_config.c  app_config.h  automation.c  automation.h  idf_component.yml  led_control.c  led_control.h  main.c  mdns_service.c  mdns_service.h  status_led.c  status_led.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
FishTankLedDriver/: platformio.ini
FishTankLedDriver2/: platformio.ini
GrowLightDriverAsync/: platformio.ini
HC-SR04/: HC-SR04.ino  (+2 more)
(+218 files in other folders)
