idf_component_register(SRCS "main.c"
                       "led_indicator.c"
                       "motion_sensor.c"
                       "nvs_manager.c"
                       "wifi_manager.c"
                       "web_server.c"
                       "mdns_service.c"
                       "host_client.c"
                       INCLUDE_DIRS "."
                       PRIV_REQUIRES "nvs_flash" "esp_driver_gpio" "esp_system" "esp_wifi" "esp_netif" "esp_event" "esp_http_server" "espressif__mdns" "json" "esp_http_client")
